test: 회원 통합 테스트 인증 흐름 보정