@@ -1,8 +1,10 @@
 package com.sungho.letterpick.member.adapter.webapi;
 
 import static com.sungho.letterpick.common.auth.SecurityAuthorities.ROLE_ADMIN;
+import static com.sungho.letterpick.common.auth.SecurityAuthorities.ROLE_USER;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.authentication;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.patch;
@@ -12,17 +14,17 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 import com.sungho.letterpick.LetterPickTestConfiguration;
 import com.sungho.letterpick.common.auth.LoginUser;
+import com.sungho.letterpick.member.adapter.security.CustomOAuth2Principal;
+import com.sungho.letterpick.member.adapter.persistence.MemberRepository;
 import com.sungho.letterpick.member.application.provided.MemberNicknameChangeRequest;
 import com.sungho.letterpick.member.application.provided.MemberSuspendRequest;
 import com.sungho.letterpick.member.application.provided.MemberWithdrawByAdminRequest;
-import com.sungho.letterpick.member.adapter.persistence.MemberRepository;
 import com.sungho.letterpick.member.domain.Member;
 import com.sungho.letterpick.member.domain.MemberFixture;
 import com.sungho.letterpick.member.domain.MemberStatus;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -33,11 +35,13 @@ import org.springframework.http.MediaType;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.oauth2.client.authentication.OAuth2AuthenticationToken;
+import org.springframework.security.oauth2.core.user.DefaultOAuth2User;
+import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 import tools.jackson.databind.ObjectMapper;
 
-@Disabled("보안 빈 영역 정리(시큐리티 규칙 테스트 도입) 후 축소·재설계 예정")
 @SpringBootTest
 @AutoConfigureMockMvc
 @ActiveProfiles("test")
@@ -65,7 +69,8 @@ class MemberControllerIntegrationTest {
         MemberNicknameChangeRequest request = new MemberNicknameChangeRequest("새닉네임");
 
         mockMvc.perform(patch("/api/v1/members/me")
-                        .with(authentication(selfAuth(saved.getId())))
+                        .with(authentication(selfAuth(saved)))
+                        .with(csrf().asHeader())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(request)))
                 .andExpect(status().isNoContent());
@@ -80,7 +85,8 @@ class MemberControllerIntegrationTest {
         Member saved = memberRepository.save(MemberFixture.createMember());
 
         mockMvc.perform(delete("/api/v1/members/me")
-                        .with(authentication(selfAuth(saved.getId()))))
+                        .with(authentication(selfAuth(saved)))
+                        .with(csrf().asHeader()))
                 .andExpect(status().isNoContent());
 
         Member found = memberRepository.findById(saved.getId()).orElseThrow();
@@ -95,6 +101,7 @@ class MemberControllerIntegrationTest {
 
         mockMvc.perform(post("/api/v1/admin/members/suspension")
                         .with(authentication(adminAuth()))
+                        .with(csrf().asHeader())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(request)))
                 .andExpect(status().isNoContent());
@@ -113,6 +120,7 @@ class MemberControllerIntegrationTest {
 
         mockMvc.perform(post("/api/v1/admin/members/withdrawal")
                         .with(authentication(adminAuth()))
+                        .with(csrf().asHeader())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(request)))
                 .andExpect(status().isNoContent());
@@ -132,11 +140,17 @@ class MemberControllerIntegrationTest {
                 .andExpect(jsonPath("$.paths['/api/v1/admin/members/withdrawal'].post").exists());
     }
 
-    private Authentication selfAuth(Long memberId) {
-        return new UsernamePasswordAuthenticationToken(
-                new LoginUser(memberId),
-                null,
-                Collections.emptyList()
+    private Authentication selfAuth(Member member) {
+        OAuth2User delegate = new DefaultOAuth2User(
+                List.of(new SimpleGrantedAuthority(ROLE_USER)),
+                Map.of("sub", "test-sub-" + member.getId()),
+                "sub"
+        );
+        CustomOAuth2Principal principal = CustomOAuth2Principal.existing(member, delegate);
+        return new OAuth2AuthenticationToken(
+                principal,
+                principal.getAuthorities(),
+                "test-registration"
         );
     }
 
